objects/Import_Export_Order__mdt.object
<CustomObject>
    <description>The order of files to export</description>
    <fields>
        <fullName>BatchSize__c</fullName>
        <description>Batch size passing into SFDC batch-able call.</description>
        <label>Batch Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Custom_Object_Name__c</fullName>
        <label>Custom Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NeedUpsert__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NeedUpsert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Where_Clause__c</fullName>
        <label>Product_Where_Clause</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Upsert_Field__c</fullName>
        <label>Upsert Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Where_Clause__c</fullName>
        <label>Where_Clause</label>
        <type>TextArea</type>
    </fields>
    <label>Import/Export Order</label>
    <pluralLabel>Import/Export Orders</pluralLabel>
</CustomObject>